2021-07-22  Chris Dumez  <cdumez@apple.com>

        The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction
        https://bugs.webkit.org/show_bug.cgi?id=228194

        Reviewed by Geoffrey Garen.

        The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction.
        This means we may suspend in the middle of that statement and crash due to holding locked files.

        To address this, we now make sure to bump the transaction count during the sqlite3_step() call if we're not
        in the middle of a transaction and the current statement is not read-only (e.g. SELECT). Note that SQLite will
        implicitly create a transaction for us in such cases.

        * platform/sql/SQLiteStatement.cpp:
        (WebCore::SQLiteStatement::step):

2021-07-22  Myles C. Maxfield  <mmaxfield@apple.com>

        [Cocoa] ".SF Arabic" should not be able to be looked up by name (because it is dot-prefixed)
        https://bugs.webkit.org/show_bug.cgi?id=228018
        <rdar://problem/80691654>

        Reviewed by Simon Fraser.

        Dot-prefixed font names are not supported. The supported way of using SF Arabic is to use
        system-ui with Arabic text. It will fall back to SF Arabic.

        Test: fast/text/sf-arabic-lookup-by-name.html

        * platform/graphics/cocoa/FontCacheCoreText.cpp:
        (WebCore::platformFontLookupWithFamily): Special case this font name, similar to how
        we have other special cases for other dot-prefixed fonts. Ideally we would change this
        check to just if the leading character is a dot, but that change would be too scary at
        this point in the release cycle.

2021-07-22  Yusuke Suzuki  <ysuzuki@apple.com>

        Rename AtomicHTMLToken to AtomHTMLToken
        https://bugs.webkit.org/show_bug.cgi?id=228196

        Reviewed by Geoffrey Garen.
