@@ -1,3 +1,15 @@
+2021-07-22  Said Abou-Hallawa  <said@apple.com>
+
+        Unreviewed, reverting 280130.
+        https://bugs.webkit.org/show_bug.cgi?id=228212
+
+        Introduced MotionMark regression
+
+        Reverted changeset:
+
+        * rendering/RenderBlock.cpp:
+        (WebCore::RenderBlock::simplifiedLayout):
+
 2021-07-22  Chris Dumez  <cdumez@apple.com>
 
         The network process fails to take a locked file assertion when executing a SQLiteStatement outside a transaction
